# zerobounce-cleanup

./: .gitignore  build.bat  cleancolumns.json  email cleaning - remove unnessisary columns, format as xlsx, .py  process zerobounce cleanup create files - Copy.py  processor.py  pyproject.toml  run.bat  ui.py
.github/workflows/: build-and-publish.yml
installer/: zerobounce.iss
zerobounce/: __init__.py  __main__.py  config.py  processor.py  ui.py
