[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "zerobounce"
version = "1.0.0"
description = "Email cleaning and ZeroBounce result processing tool"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "openpyxl",
    "tkinterdnd2",
]
